--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "chatbotback",
   "version": "1.0.0",
-  "description": "",
+  "description": "projet hébergé sur render.com pour un projet de chatbot",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -11,6 +11,20 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "nodemon": "^2.0.22"
-  }
+    "nodemon": "^2.0.22",
+    "swagger": "^0.7.5",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^4.6.3"
+  },
+  "devDependencies": {
+    "mocha": "^2.5.3"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Beauvoistheo/chatbotapi.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Beauvoistheo/chatbotapi/issues"
+  },
+  "homepage": "https://github.com/Beauvoistheo/chatbotapi#readme"
 }
